<resources>
    <string name="app_name">FakeSocial</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">LOGIN</string>
    <string name="dont_have_account">¿No tienes cuenta?,</string>
    <string name="createHere">crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirPassword">Confirmar Contraseña</string>
    <string name="text_button_createaccount">Únete</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="username_cardview">Uriel Ramirez</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 dias</string>
    <string name="likenumber_card">10 Me gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Yo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
