<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.martix.fakesocial.view.CreateAccountActivity">

    <include layout="@layout/actionbar_toolbar"/>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:padding="@dimen/activity_vertical_margin"
          android:orientation="vertical">

          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:theme="@style/EditTextBlack"
              android:layout_marginTop="@dimen/edittext_margin_createaccount">

              <com.google.android.material.textfield.TextInputEditText
                  android:id="@+id/email"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/hint_email"/>

          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:theme="@style/EditTextBlack"
              android:layout_marginTop="@dimen/edittext_margin_createaccount">

              <com.google.android.material.textfield.TextInputEditText
                  android:id="@+id/name"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/hint_name"/>

          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:theme="@style/EditTextBlack"
              android:layout_marginTop="@dimen/edittext_margin_createaccount">

              <com.google.android.material.textfield.TextInputEditText
                  android:id="@+id/user"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/hint_user"/>

          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:theme="@style/EditTextBlack"
              android:layout_marginTop="@dimen/edittext_margin_createaccount">

              <com.google.android.material.textfield.TextInputEditText
                  android:id="@+id/password_createaccount"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/hint_password"
                  android:inputType="textPassword"/>

          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:theme="@style/EditTextBlack"
              android:layout_marginTop="@dimen/edittext_margin_createaccount">

              <com.google.android.material.textfield.TextInputEditText
                  android:id="@+id/confimPassword"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/hint_confirPassword"
                  android:inputType="textPassword"/>

          </com.google.android.material.textfield.TextInputLayout>

          <Button
              android:id="@+id/joinUS"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/text_button_createaccount"
              android:theme="@style/RaisedButtonDark"/>

      </LinearLayout>


  </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>